--- a/component/projetos.html
+++ b/component/projetos.html
@@ -1,49 +1,90 @@
 <section id="projetos" class="container py-5">
-    <div class="row">
-        <div class="col text-center">
-            <h2 class="mb-4">Projetos</h2>
-            <p class="mb-5">Aqui estão alguns dos projetos que desenvolvi ou participei ativamente.</p>
-        </div>
-    </div>
-
+    <h2 class="text-center mb-4">Meus Projetos</h2>
     <div class="row g-4">
-        <!-- Projeto 1 -->
+
+        <!-- Conversor de Moeda -->
         <div class="col-md-6 col-lg-4">
             <div class="card h-100 shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">Nome do Projeto 1</h5>
-                    <p class="card-text">Descrição breve do projeto, tecnologias usadas e objetivo principal.</p>
+                    <h5 class="card-title">Conversor de Moeda</h5>
+                    <p class="card-text">Aplicação simples para converter valores entre moedas. Desenvolvido com HTML, CSS e JavaScript.</p>
                 </div>
-                <div class="card-footer bg-transparent border-top-0">
-                    <a href="#" target="_blank" class="btn btn-primary btn-sm">Ver Projeto</a>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="https://github.com/devLeandroCoelho/conversorMoeda" target="_blank" class="btn btn-outline-secondary btn-sm">Projeto no Github</a>
+                    <a href="https://devleandrocoelho.github.io/conversorMoeda/" target="_blank" class="btn btn-outline-success btn-sm">Página do Projeto</a>
                 </div>
             </div>
         </div>
 
-        <!-- Projeto 2 -->
+        <!-- Gerador de Senhas -->
         <div class="col-md-6 col-lg-4">
             <div class="card h-100 shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">Nome do Projeto 2</h5>
-                    <p class="card-text">Descrição breve do projeto, tecnologias usadas e objetivo principal.</p>
+                    <h5 class="card-title">Gerador de Senhas</h5>
+                    <p class="card-text">Gere senhas seguras com critérios personalizados. Ideal para melhorar a segurança online.</p>
                 </div>
-                <div class="card-footer bg-transparent border-top-0">
-                    <a href="#" target="_blank" class="btn btn-primary btn-sm">Ver Projeto</a>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="https://github.com/devLeandroCoelho/passGen" target="_blank" class="btn btn-outline-secondary btn-sm">Projeto no Github</a>
+                    <a href="https://devleandrocoelho.github.io/passGen/" target="_blank" class="btn btn-outline-success btn-sm">Página do Projeto</a>
                 </div>
             </div>
         </div>
 
-        <!-- Projeto 3 -->
+        <!-- To-do List -->
         <div class="col-md-6 col-lg-4">
             <div class="card h-100 shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">Nome do Projeto 3</h5>
-                    <p class="card-text">Descrição breve do projeto, tecnologias usadas e objetivo principal.</p>
+                    <h5 class="card-title">To-Do List</h5>
+                    <p class="card-text">Lista de tarefas com HTML, CSS e JavaScript. Adicione, marque como concluído e remova tarefas.</p>
                 </div>
-                <div class="card-footer bg-transparent border-top-0">
-                    <a href="#" target="_blank" class="btn btn-primary btn-sm">Ver Projeto</a>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="https://github.com/devLeandroCoelho/projeto-todolist-js-css-html" target="_blank" class="btn btn-outline-secondary btn-sm">Projeto no Github</a>
+                    <a href="https://devleandrocoelho.github.io/projeto-todolist-js-css-html/" target="_blank" class="btn btn-outline-success btn-sm">Página do Projeto</a>
                 </div>
             </div>
         </div>
+
+        <!-- Calculadora -->
+        <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title">Calculadora</h5>
+                    <p class="card-text">Projeto de calculadora básica com operações matemáticas. Interface limpa e funcional.</p>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="https://github.com/devLeandroCoelho/projeto-calculadora-js-css-html" target="_blank" class="btn btn-outline-secondary btn-sm">Projeto no Github</a>
+                    <a href="https://devleandrocoelho.github.io/projeto-calculadora-js-css-html/" target="_blank" class="btn btn-outline-success btn-sm">Página do Projeto</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Jogo da Velha -->
+        <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title">Jogo da Velha</h5>
+                    <p class="card-text">Versão interativa do clássico jogo da velha. Lógica de vitória e reinício incluídas.</p>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="https://github.com/devLeandroCoelho/projeto-jogovelha-js-css-html" target="_blank" class="btn btn-outline-secondary btn-sm">Projeto no Github</a>
+                    <a href="https://devleandrocoelho.github.io/projeto-jogovelha-js-css-html/" target="_blank" class="btn btn-outline-success btn-sm">Página do Projeto</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Cronômetro -->
+        <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title">Cronômetro</h5>
+                    <p class="card-text">Cronômetro digital com controles de iniciar, pausar e reiniciar. Desenvolvido com JavaScript puro.</p>
+                </div>
+                <div class="card-footer d-flex justify-content-between">
+                    <a href="https://github.com/devLeandroCoelho/projeto-cronometro-js-css-html" target="_blank" class="btn btn-outline-secondary btn-sm">Projeto no Github</a>
+                    <a href="https://devleandrocoelho.github.io/projeto-cronometro-js-css-html/" target="_blank" class="btn btn-outline-success btn-sm">Página do Projeto</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
