--- a/component/sobre.html
+++ b/component/sobre.html
@@ -1,4 +1,4 @@
-<section id="sobre" class="container py-5">
+<section id="sobre" class="text-center py-5">
     <div class="row justify-content-center">
         <div class="col-lg-10">
             <h2 class="mb-4 text-center">Sobre Mim</h2>
