--- a/component/contato.html
+++ b/component/contato.html
@@ -31,7 +31,7 @@
                     <label for="mensagem" class="form-label">Mensagem</label>
                     <textarea class="form-control" id="mensagem" rows="4" placeholder="Digite sua mensagem..."></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-success">Enviar</button>
             </form>
         </div>
     </div>
