--- a/component/navbar.html
+++ b/component/navbar.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="#">Leandro Coelho</a>
+        <a class="navbar-brand" href="#">devLeandroCoelho</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#hero">Início</a></li>
