--- a/component/hero.html
+++ b/component/hero.html
@@ -1,10 +1,9 @@
 <section id="hero" class="d-flex align-items-center text-white">
     <div class="container text-center text-md-start d-flex flex-column flex-md-row align-items-center justify-content-between">
 
-        <!-- Texto -->
         <div>
             <h1 class="display-4 fw-bold">Olá, eu sou <span class="text-success">Leandro Coelho</span></h1>
-            <p class="lead mt-3">Desenvolvedor Full Stack com +10 anos de experiência, apaixonado por criar soluções eficientes, seguras e com foco no usuário.</p>
+            <p class="lead mt-3">Desenvolvedor Full Stack, apaixonado por criar soluções eficientes, seguras e com foco no usuário.</p>
             <p class="mt-2">Com conhecimentos em Java, Spring Boot, JavaScript e automações com boas práticas de segurança.</p>
 
             <div class="mt-4 d-flex flex-wrap gap-3">
@@ -18,7 +17,6 @@
             </div>
         </div>
 
-        <!-- Imagem (opcional) -->
         <div class="mt-5 mt-md-0">
             <img src="img/eu.png" alt="Leandro Coelho" class="img-fluid rounded-circle shadow-lg" style="max-width: 250px;">
         </div>
