AJustes finos no contato

--- a/component/contato.html
+++ b/component/contato.html
@@ -19,7 +19,7 @@
 
             <div class="text-center mt-5">
                 <a href="https://wa.me/5548988547455" target="_blank" class="btn btn-success btn-lg">
-                    <i class="bi bi-whatsapp me-2"></i> Fale comigo no WhatsApp
+                    <i class="bi bi-whatsapp me-2"></i> Fale comigo - WhatsApp
                 </a>
             </div>
         </div>
